--- a/viewer/index.html
+++ b/viewer/index.html
@@ -6,12 +6,45 @@
   <title>ABAP Parser Viewer</title>
   <style>
     :root {
+      color-scheme: dark;
+      --bg: #0b1220;
+      --panel: #0f172a;
+      --border: #22324a;
+      --text: #e5e7eb;
+      --muted: #94a3b8;
+      --accent: #60a5fa;
+      --hover: #1e293b;
+      --gutter-bg: #0b1526;
+      --code-bg: #0b1526;
+      --pill-bg: #1e293b;
+      --pill-text: #bfdbfe;
+      --selected-row-bg: #1e293b;
+      --tab-active-bg: #1e293b;
+      --tab-active-border: #334155;
+      --tab-active-text: #bfdbfe;
+      --danger: #fca5a5;
+      --overlay: rgba(0, 0, 0, 0.55);
+    }
+
+    :root[data-theme="light"] {
+      color-scheme: light;
       --bg: #f6f7f9;
       --panel: #ffffff;
       --border: #d8dde6;
       --text: #222b3a;
       --muted: #6b7280;
       --accent: #1f7ae0;
+      --hover: #f3f4f6;
+      --gutter-bg: #f8fafc;
+      --code-bg: #f8fafc;
+      --pill-bg: #eef2ff;
+      --pill-text: #3730a3;
+      --selected-row-bg: #eef2ff;
+      --tab-active-bg: #eef2ff;
+      --tab-active-border: #c7d2fe;
+      --tab-active-text: #3730a3;
+      --danger: #b42318;
+      --overlay: rgba(15, 23, 42, 0.5);
     }
 
     * {
@@ -62,6 +95,7 @@
     .controls input[type="file"] {
       border: 1px solid var(--border);
       background: var(--panel);
+      color: var(--text);
       padding: 6px;
       border-radius: 6px;
     }
@@ -79,6 +113,7 @@
     .controls select {
       border: 1px solid var(--border);
       background: var(--panel);
+      color: var(--text);
       padding: 8px 10px;
       border-radius: 6px;
       font-size: 13px;
@@ -101,7 +136,7 @@
     }
 
     .controls .secondary:hover {
-      background: #f3f4f6;
+      background: var(--hover);
     }
 
     .secondary {
@@ -115,7 +150,7 @@
     }
 
     .secondary:hover {
-      background: #f3f4f6;
+      background: var(--hover);
     }
 
     .controls .hint {
@@ -141,7 +176,33 @@
       min-height: 0;
     }
 
-    .panel h2 {
+    .panel-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+
+    .panel-header h2 {
+      margin: 0;
+      font-size: 18px;
+    }
+
+    .panel-tabs {
+      display: inline-flex;
+      gap: 8px;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+    }
+
+    .tab-btn.active {
+      background: var(--tab-active-bg);
+      border-color: var(--tab-active-border);
+      color: var(--tab-active-text);
+    }
+
+    .panel > h2 {
       margin: 0 0 10px 0;
       font-size: 18px;
     }
@@ -149,14 +210,83 @@
     #inputText {
       width: 100%;
       min-height: 360px;
-      border: 1px solid var(--border);
-      border-radius: 8px;
       padding: 10px;
       font-family: Consolas, monospace;
       font-size: 13px;
-      resize: vertical;
+      line-height: 18px;
+      resize: none;
       flex: 1;
       min-height: 0;
+      border: none;
+      outline: none;
+      white-space: pre;
+      overflow-wrap: normal;
+      background: transparent;
+      color: var(--text);
+    }
+
+    .input-editor {
+      width: 100%;
+      display: flex;
+      flex: 1;
+      min-height: 0;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      overflow: hidden;
+      background: var(--panel);
+    }
+
+    #inputGutter {
+      width: 68px;
+      flex: none;
+      border-right: 1px solid var(--border);
+      background: var(--gutter-bg);
+      color: var(--muted);
+      font-family: Consolas, monospace;
+      font-size: 12px;
+      line-height: 18px;
+      position: relative;
+      overflow: hidden;
+      user-select: none;
+    }
+
+    #inputGutterContent {
+      padding: 10px 6px;
+      will-change: transform;
+    }
+
+    .gutter-line {
+      height: 18px;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .gutter-num {
+      flex: 1;
+      text-align: right;
+    }
+
+    .gutter-jump {
+      border: 1px solid transparent;
+      background: transparent;
+      color: var(--muted);
+      padding: 0 4px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 12px;
+      line-height: 1.2;
+    }
+
+    .gutter-jump:hover {
+      background: var(--hover);
+      border-color: var(--border);
+      color: var(--text);
+    }
+
+    .gutter-jump:focus {
+      outline: 2px solid var(--accent);
+      outline-offset: 1px;
     }
 
     .modal textarea {
@@ -169,16 +299,25 @@
       resize: vertical;
       min-height: 140px;
       max-height: 40vh;
+      background: var(--panel);
+      color: var(--text);
     }
 
     .error {
-      color: #b42318;
+      color: var(--danger);
       font-size: 13px;
       margin-top: 8px;
       white-space: pre-wrap;
     }
 
     #output {
+      flex: 1;
+      min-height: 0;
+      overflow: auto;
+      padding-right: 6px;
+    }
+
+    #declDescPanel {
       flex: 1;
       min-height: 0;
       overflow: auto;
@@ -233,7 +372,7 @@
     }
 
     .btn-ghost:hover {
-      background: #f3f4f6;
+      background: var(--hover);
     }
 
     .muted {
@@ -246,7 +385,7 @@
       padding: 8px;
       border: 1px solid var(--border);
       border-radius: 8px;
-      background: #f8fafc;
+      background: var(--code-bg);
       font-family: Consolas, monospace;
       font-size: 13px;
       white-space: pre-wrap;
@@ -256,8 +395,8 @@
       display: inline-block;
       padding: 2px 8px;
       border-radius: 999px;
-      background: #eef2ff;
-      color: #3730a3;
+      background: var(--pill-bg);
+      color: var(--pill-text);
       font-size: 12px;
       margin: 2px 4px 2px 0;
     }
@@ -274,6 +413,10 @@
       border-bottom: 1px solid var(--border);
       padding: 6px 4px;
       vertical-align: top;
+    }
+
+    tr.desc-selected td {
+      background: var(--selected-row-bg);
     }
 
     .decl-desc,
@@ -301,7 +444,7 @@
     }
 
     .icon-btn:hover {
-      background: #f3f4f6;
+      background: var(--hover);
       color: var(--text);
     }
 
@@ -339,7 +482,7 @@
     .modal {
       position: fixed;
       inset: 0;
-      background: rgba(15, 23, 42, 0.5);
+      background: var(--overlay);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -386,6 +529,11 @@
       font-family: Consolas, monospace;
       font-size: 12px;
     }
+
+    #editModal,
+    #jsonModal {
+      z-index: 1100;
+    }
   </style>
 </head>
 <body>
@@ -406,11 +554,13 @@
       <label class="toggle"><input type="checkbox" id="showKeywords" checked>keywords</label>
       <label class="toggle"><input type="checkbox" id="showValues" checked>values</label>
       <label class="toggle"><input type="checkbox" id="showExtras" checked>extras</label>
+      <label class="toggle"><input type="checkbox" id="themeToggle" checked>dark</label>
       <button type="button" id="expandAllBtn" class="secondary">Expand all</button>
       <button type="button" id="collapseAllBtn" class="secondary">Collapse all</button>
       <button type="button" id="clearFiltersBtn" class="secondary">Clear</button>
       <button type="button" id="descBtn" class="secondary">Descriptions</button>
       <button type="button" id="rulesBtn" class="secondary">Rules</button>
+      <button type="button" id="settingsBtn" class="secondary">Settings</button>
       <button type="button" id="exportXmlBtn" class="secondary">Export XML</button>
       <span class="muted hint">Tip: click “Code” on a card to select the corresponding lines in the input; click “JSON” to inspect the raw object.</span>
     </div>
@@ -418,13 +568,33 @@
     <div class="layout">
       <div class="panel">
         <h2>Input (ABAP / JSON)</h2>
-        <textarea id="inputText" placeholder="Paste ABAP code here"></textarea>
+        <div class="input-editor" id="inputEditor">
+          <div id="inputGutter"><div id="inputGutterContent"></div></div>
+          <textarea id="inputText" placeholder="Paste ABAP code here" wrap="off"></textarea>
+        </div>
         <div class="error" id="error"></div>
       </div>
 
       <div class="panel">
-        <h2>Output</h2>
+        <div class="panel-header">
+          <h2 id="rightPanelTitle">Output</h2>
+          <div class="panel-tabs">
+            <button type="button" id="rightTabOutputBtn" class="secondary tab-btn active">Output</button>
+            <button type="button" id="rightTabDescBtn" class="secondary tab-btn">Descriptions</button>
+            <button type="button" id="declDescJsonBtn" class="secondary" hidden>Storage JSON</button>
+          </div>
+        </div>
         <div id="output" class="muted">No data loaded.</div>
+        <div id="declDescPanel" hidden>
+          <div class="controls" style="margin-bottom:8px">
+            <input type="search" id="declDescSearch" placeholder="Search (type/scope/id/desc)…">
+            <label class="toggle"><input type="checkbox" id="declDescMissingOnly" checked>missing only</label>
+          </div>
+          <div class="muted" style="margin-bottom:6px">Declaration types</div>
+          <div id="declDescTypes" class="controls" style="margin-bottom:8px"></div>
+          <div class="muted" id="declDescSummary" style="margin-bottom:8px"></div>
+          <div id="declDescTable"></div>
+        </div>
       </div>
     </div>
   </div>
@@ -457,7 +627,18 @@
       <div class="modal-body">
         <div class="muted" id="editLabel" style="margin-bottom:8px"></div>
         <div class="muted" id="editHint" style="margin-bottom:8px"></div>
-        <textarea id="editDesc" placeholder="Enter description…"></textarea>
+        <div id="editSingleWrap">
+          <textarea id="editDesc" placeholder="Enter description…"></textarea>
+        </div>
+        <div id="editStructWrap" hidden>
+          <div class="muted" style="margin-bottom:6px">Struct description</div>
+          <textarea id="editStructDesc" placeholder="Enter struct description…"></textarea>
+          <div class="muted" style="margin:8px 0 6px">Item description</div>
+          <textarea id="editItemDesc" placeholder="Enter item description…"></textarea>
+        </div>
+        <div style="margin-top:8px">
+          <label class="toggle"><input type="checkbox" id="editSkipNormalize">Skip normalization for this user description</label>
+        </div>
         <div class="muted" style="margin-top:8px">Tip: Ctrl+Enter to save, Esc to close.</div>
       </div>
     </div>
@@ -490,6 +671,48 @@
         <div class="error" id="rulesError"></div>
         <textarea id="rulesJson" placeholder="Paste or edit config JSON here…"></textarea>
         <div class="muted" style="margin-top:8px">Tip: click Save, then Render to test; Download creates a .json you can add into /configs.</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal" id="settingsModal" hidden>
+    <div class="modal-content">
+      <div class="modal-header">
+        <strong>Settings</strong>
+        <div class="modal-actions">
+          <button type="button" id="settingsSaveBtn" class="secondary">Save</button>
+          <button type="button" id="settingsResetBtn" class="secondary">Reset</button>
+          <button type="button" id="settingsCloseBtn" class="secondary">Close</button>
+        </div>
+      </div>
+      <div class="modal-body">
+        <div class="muted" style="margin-bottom:8px">
+          Placeholders:
+          <code>{{struct}}</code>, <code>{{item}}</code>, <code>{{desc}}</code>
+        </div>
+
+        <div style="margin-bottom:16px">
+          <label class="toggle"><input type="checkbox" id="settingsNormalizeDesc">Normalize decl <code>desc</code> (apply templates)</label>
+        </div>
+
+        <div style="margin-bottom:16px">
+          <div class="muted" style="margin-bottom:6px">Declaration types shown in Descriptions modal</div>
+          <div id="settingsDeclTypes" class="controls" style="margin-bottom:0"></div>
+        </div>
+
+        <div style="margin-bottom:16px">
+          <div class="muted" style="margin-bottom:6px">Struct desc template (used for struct fields)</div>
+          <input type="text" id="settingsStructTemplate" placeholder="{{struct}}-{{item}}" style="width:100%">
+        </div>
+
+        <div style="margin-bottom:8px">
+          <div class="muted" style="margin-bottom:6px">Name normalization templates (use {{desc}})</div>
+          <div id="settingsNameTemplates"></div>
+        </div>
+
+        <div class="muted" style="margin-top:8px">
+          Prefix match: 1 char + CODE (e.g. <code>GCN_TOTAL</code>). If no description, keep technical ID.
+        </div>
       </div>
     </div>
   </div>
